# glue

./: .gitignore  .gitmodules  CMakeLists.txt  cpphelper.php  index.php  registry.php  template.php  typedef.php
templates/common/: CMakeLists.txt
templates/common/include/glue/: math.hpp  meta.hpp  types.hpp  {api}.types.hpp
templates/common/source/common/: strings.cpp
templates/feature/.fragments/: assign_statement  assign_statement.php  member_constant.php  member_function_pointer  uniform_api  uniform_api.php  uniform_api_decl  uniform_api_defn  uniform_api_dsa_vector_decl  uniform_api_dsa_vector_decl.php  uniform_api_dsa_vector_defn  uniform_api_dsa_vector_defn.php  uniform_api_vector_decl  uniform_api_vector_decl.php  uniform_api_vector_defn  uniform_api_vector_defn.php
templates/feature/include/glue/lvl1/{api}/: {version}.{profile}.hpp
templates/feature/include/glue/lvl2/{api}/: {version}.{profile}.hpp
templates/feature/include/glue/multi/{api}/: {version}.{profile}.hpp
templates/feature/include/glue/{api}/: {version}.{profile}.hpp
templates/feature/source/lvl1/{api}/: {version}.{profile}.cpp
templates/feature/source/lvl2/{api}/: {version}.{profile}.cpp
templates/feature/source/multi/{api}/: {version}.{profile}.cpp
templates/feature/source/{api}/: {version}.{profile}.cpp
templates/makefiles/: CMakeLists.txt
templates/tests/tests/: basic.cpp
test/: test.cpp
