cmake_minimum_required (VERSION 3.10)
project (glue CXX)
add_definitions(-D_SCL_SECURE_NO_WARNINGS)
if (${CMAKE_SIZEOF_VOID_P} EQUAL "8")
    set (PROJECTNAME_ARCHITECTURE "x64")
else ()
    set (PROJECTNAME_ARCHITECTURE "x86")
endif ()

include_directories ("${CMAKE_CURRENT_SOURCE_DIR}/build/include")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB_RECURSE GLUE_SOURCE "." "${CMAKE_CURRENT_SOURCE_DIR}/build/source/*.cpp")
file(GLOB_RECURSE GLUE_HEADER "." "${CMAKE_CURRENT_SOURCE_DIR}/build/include/*.hpp")
add_library(glue ${GLUE_SOURCE} ${GLUE_HEADER})

install(TARGETS glue EXPORT glue
  RUNTIME DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/install/bin/${PROJECTNAME_ARCHITECTURE}"
  LIBRARY DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/install/lib/${PROJECTNAME_ARCHITECTURE}"
  ARCHIVE DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/install/lib/${PROJECTNAME_ARCHITECTURE}"
  INCLUDES DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/install/includes")
